[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/RunStatePrompts.gd" type="Script" id=1]
[ext_resource path="res://UI/FontedText.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Prompts" type="Position2D"]
script = ExtResource( 1 )

[node name="RunStateText" parent="." instance=ExtResource( 2 )]
text = "Go!"

[node name="FadeAnimation" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )

[node name="RemoveTextTimer" type="Timer" parent="."]
one_shot = true
